2008-12-05  Werner Koch  <wk@g10code.com>

	* global.c (gcry_free): Save and restore ERRNO if set.

2008-11-24  Werner Koch  <wk@g10code.com>

	* sexp.c (get_internal_buffer): New.
	(sexp_sscan): Add format character S.
	* cipher-proto.h (pk_ext_generate_t): Add field EXTRAINFO  changed
	all implementors.

	* cipher-proto.h (pk_ext_generate_t): Simplify. 
	(pk_get_param): New.
	(pk_extra_spec_t): Add field GET_PARAM.
	* cipher.h (PUBKEY_FLAG_TRANSIENT_KEY): Remove.
	(_gcry_pubkey_extraspec_elg): New.

2008-11-05  Werner Koch  <wk@g10code.com>

	* cipher.h (CIPHER_INFO_NO_WEAK_KEY): New.

	* cipher-proto.h (cipher_set_extra_info_t): New.
	(cipher_extra_spec): Add field SET_EXTRA_INFO.

2008-10-30  Werner Koch  <wk@g10code.com>

	* g10lib.h (GCC_ATTR_FORMAT_ARG): New.
	(_gcry_gettext): Use it.

2008-10-24  Werner Koch  <wk@g10code.com>

	* global.c (inactive_fips_mode): Move to fips.c. 
	(gcry_set_allocation_handler): Factor code out to ...
	* fips.c (_gcry_inactivate_fips_mode): New.
	(_gcry_is_fips_mode_inactive): New.

2008-09-29  Werner Koch  <wk@g10code.com>

	* gcrypt-module.h (GCRY_MODULE_ID_USER, GCRY_MODULE_ID_USER_LAST):
	New.
	* module.c (MODULE_ID_USER, MODULE_ID_USER_LAST): Define using new
	macros.

2008-09-20  Werner Koch  <wk@g10code.com>

	* hmac256.c (finalize) [WORDS_BIGENDIAN]: Fix sigbus problem.

2008-09-18  Werner Koch  <wk@g10code.com>

	* cipher-proto.h (pk_ext_generate_t): Add args QBITS, NAME, DOMAIN.

	* fips.c (fips_new_state): Allow Error => Error transition.

2008-09-18  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (gcry_fips_mode_active): New.

	* secmem.c (_gcry_secmem_init): Factor most code out to ..
	(secmem_init): .. new.
	(DEFAULT_POOL_SIZE): Rename to MINIMUM_POOL_SIZE.
	(STANDARD_POOL_SIZE): New.
	(_gcry_secmem_malloc_internal): Don't abort if the pool is not
	initialized but try to out intialize it first and only then print
	an error message and return NULL.  If the pool is not locked while
	in FIPS mode, return NULL.
