@@ -270,14 +270,8 @@ finalize (hmac256_context_t hd)
 
   /* Store the digest into hd->buf.  */
   p = hd->buf;
-#ifdef WORDS_BIGENDIAN
-#define X(a) do { *p++ = hd->h##a;       *p++ = hd->h##a >> 8;   \
-		  *p++ = hd->h##a >> 16; *p++ = hd->h##a >> 24; } while(0)
-#else /* little endian */
 #define X(a) do { *p++ = hd->h##a >> 24; *p++ = hd->h##a >> 16;	 \
 		  *p++ = hd->h##a >> 8; *p++ = hd->h##a; } while(0)
-
-#endif
   X(0);
   X(1);
   X(2);
